# stm32wl-lightswitch-demo

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
m401-bsp/: Cargo.toml
m401-bsp/src/: led.rs  lib.rs  pb.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
