[package]
name = "shared"
version = "0.1.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
license = "MIT"

[dependencies]
static_assertions = "1"

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

#[dependencies.nucleo-wl55jc-bsp]
#version = "0.6"
#features = ["stm32wl5x_cm4", "rt", "defmt", "chrono"]

[dependencies.m401-bsp]
path = "../m401-bsp"
version = "0.6"
features = ["stm32wle5", "rt", "defmt", "chrono"]